fix style that effected too much (child lis)

--- a/styles-edit-post.css
+++ b/styles-edit-post.css
@@ -47,7 +47,7 @@ ul.simple-fields-metabox-field-group-fields {
 	margin: 0 -10px;
 }
 
-ul.simple-fields-metabox-field-group-fields-repeatable li {
+ul.simple-fields-metabox-field-group-fields-repeatable .simple-fields-metabox-field-group {
 	margin-top: 1em;
 	padding-top: .5em;
 	padding-bottom: .5em;
@@ -61,11 +61,11 @@ ul.simple-fields-metabox-field-group-fields-repeatable li {
 	border-top: 2px solid #eee;
 	padding: .5em 1.5em;
 	margin: 0 0 0 0;
-        /*opacity: .9;*/
+	/*opacity: .9;*/
 }
-ul.simple-fields-metabox-field-group-fields-repeatable li:hover {
+ul.simple-fields-metabox-field-group-fields-repeatable .simple-fields-metabox-field-group:hover {
 	background-color: #fffcf1;
-        /*opacity: 1;*/
+	/*opacity: 1;*/
 }
 
 
@@ -372,7 +372,7 @@ ul.simple-fields-file-browser-list {
 
 }
 
-.simple-fields-metabox-field-group-fields-view-table li {
+.simple-fields-metabox-field-group-fields-view-table .simple-fields-metabox-field-group {
 	border-top: 1px solid #eee !important;
 	/*background-image: none !important;*/
 	padding-top: 15px !important;
